--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Rock Paper Scissors</title>
-  <<script type="text/javascript" src="./game.js">
+  <script type="text/javascript" src="./game.js">
 
     </script>
 </head>
